@@ -1,6 +1,10 @@
 Version 3.2.1 - xx xxx 2010
+  * Handle the case where accounting stats get too
+    large. Ticket #58.
   * Login Response not properly XML encoded. Ticket #78.
   * Query grammar in 1.7.2 supports negative numbers. Ticket #79.
+  * An invalid or missing session cookie causes invalid
+    response. Ticket #81.
 
 Version 3.2.0b1 - 17 Dec 2009
  
@@ -19,7 +23,7 @@ Version 3.2.0b1 - 17 Dec 2009
     SearchSqlBuilders. Ticket #72.
   * MaximumLength in Table metadata must be > 0. Ticket #74.
   * RETS Character Type not properly handling .EMPTY. Ticket #75.
-  * DMQL Lexer incorrectly tokenizes stings beginning with
+  * DMQL Lexer incorrectly tokenizes strings beginning with
     numbers. Ticket #76.
   * Failure to find an image in an object-set does not
     properly close the multi-part response. Ticket #77.
